--- a/homeworks/homework1/homework1.tex
+++ b/homeworks/homework1/homework1.tex
@@ -400,10 +400,11 @@ In this exercise, we will analyze the risk of wavelet denoising.
   with a slightly finer analysis).
 \end{enumerate}
 
-\section{Minimax lower bounds for H{\"o}lder classes [8 points]} 
+\section{Bonus: minimax lower bounds for H{\"o}lder classes [8 points]}  
 
-Generalize the univariate calculation given in the minimax lecture to the
-multivariate case, to show that for the $d$-dimensional H{\"o}lder ball 
+This is an optional bonus problem. Generalize the univariate calculation given
+in the minimax lecture to the multivariate case, to show that for the
+$d$-dimensional H{\"o}lder ball   
 \[
 C^k(L; [0,1]^d) = \Big\{ f : [0,1]^d \to \R \,:\, | D^\alpha f (x) - D^\alpha
 f(z) | \leq L \|x-z\|_2 \; \text{for all $|\alpha| < k$, and $x,z \in [0,1]^d$}
