--- a/lectures/nn_kernels/nn_kernels.tex
+++ b/lectures/nn_kernels/nn_kernels.tex
@@ -73,7 +73,8 @@ empirical distribution of $x_1\dots,x_n$, is defined by
 \]
 You'll often see this written as \smash{$\|\cdot\|_{L^2(P_n)}$}, but in this
 document we'll abbreviate this by $\|\cdot\|_n$, and we'll call this the 
-\emph{empirical norm}.
+\emph{empirical $L^2$ norm} (and often drop ``$L^2$'' when it is clear from the 
+context). 
 
 For $x_0 \sim P$, recall that the $L^2(P)$ norm is defined by 
 \[
@@ -81,7 +82,7 @@ For $x_0 \sim P$, recall that the $L^2(P)$ norm is defined by
 \]
 Again, you'll often see this written as \smash{$\|\cdot\|_{L^2(P)}$}, but in
 we'll abbreviate this by $\|\cdot\|_2$, and we'll call this the \emph{population
-  norm}.    
+  $L^2$ norm} (often drop ``$L^2$'' when it is clear from the context).  
 
 Key quantities of interests will be the in-sample and out-of-sample error
 incurred by an estimator \smash{$\hf$} of $f_0$, which are, respectively, 
