--- a/lectures/review/review.tex
+++ b/lectures/review/review.tex
@@ -173,7 +173,7 @@ The following result is also true (under regularity conditions):
 \]
 From this we can discern
 \[
-\|\htheta - \theta\|_2^2 = O_p \bigg( \frac{1}{n} \tr[I(\theta) ^{-1}] \bigg),   
+\|\htheta - \theta\|_2^2 = O_p \bigg( \frac{\tr[I(\theta) ^{-1}]}{n} \bigg),    
 \] 
 and under standard conditions this will be $O_p(d/n)$. This should give you a
 rough sense for the squared error of the MLE, in standard (idealized)
